# gertrudes

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
src/gertrudes/: __init__.py  __main__.py  cli.py  config.py  file_changes.py  git.py  github.py  implementer.py  llm.py  planner.py  sandbox.py
tests/: test_config.py  test_file_changes.py  test_git.py  test_github.py  test_implementer.py  test_planner.py  test_sandbox.py
