[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gertrudes"
version = "0.1.0"
description = "Picks up GitHub issues with a configurable tag and implements them using a configurable LLM"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "litellm>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "responses",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.0",
]

[project.scripts]
gertrudes = "gertrudes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["gertrudes"]
